# delovecho

./: .env.example  .eslintrc.json  .gitignore  ANALYSIS_COMPLETION_REPORT.md  ANALYSIS_SUMMARY.txt  DEPLOYMENT.md  DOVE9_DOVECOT_INTEGRATION_STATUS.md  DOVE9_DOVECOT_INTEGRATION_STRATEGY.md  Dockerfile  IMPLEMENTATION_ROADMAP.md  INTEGRATION_ANALYSIS_SUMMARY.md  PHASE1_COMPLETION_REPORT.md  PLAN.md  docker-compose.yml  dove9-cmake-validate.ps1  dove9-validate.ps1  jest.config.js  jest.e2e.config.js  package-lock.json  package.json  pnpm-lock.yaml  test-ipc-client.mjs
.github/: copilot-migration-instructions.md
.github/agents/: dove9.md  neuro-chao.agent.md  neuro-endocrine.agent.md
.github/agents/plugall/: .mcp.json
.github/skills/agentverse-ai/: SKILL.md
.github/skills/anylogic-modeler/: SKILL.md
.github/skills/bolt-cpp-ml²/: SKILL.md
.github/skills/copilot-instructions-blueprint-generator/: SKILL.md
.github/skills/deltecho (7)/: SKILL.md
.github/skills/dovecho-autonomous-agent/: SKILL.md
.github/skills/dovecho-c-module/: SKILL.md
.github/skills/dovecho-mail-pipeline/: SKILL.md
.github/skills/dovecho-napi-bridge/: SKILL.md
.github/skills/dovecho-test-harness/: SKILL.md
.github/skills/e350-mlp/: SKILL.md
.github/skills/echo-angel (2)/: SKILL.md
.github/skills/erebus-350/: SKILL.md
.github/skills/glyph-noetic-inferno-engine/: SKILL.md
.github/skills/live2d-avatar (5)/: SKILL.md
.github/skills/opencog-hpp/templates/: CMakeLists.txt
.github/skills/opencog-hpp/templates/include/oc/persist/: persist.hpp
.github/skills/opencog-hpp/templates/include/oc/pln/: pln.hpp
.github/skills/opencog-hpp/templates/include/oc/util/: util.hpp
.github/workflows/: ci.yml  release.yml
Archecho/unreal-echo/: README.md
Archecho/unreal-mcog/: CMakeLists.txt
Archecho/unreal-mcog/tests/: CMakeLists.txt  test_afi.cpp  test_atomese.cpp  test_civic_angel.cpp  test_cloninger.cpp  test_developmental.cpp  test_endocrine.cpp  test_entelechy_integration.cpp  test_integration.cpp  test_interoceptive.cpp  test_marduk.cpp  test_narrative.cpp  test_nervous.cpp  test_neuroendocrine.cpp  test_social.cpp  test_temporal.cpp  test_touchpad.cpp
Archecho/unreal-skills/: AUTOGNOSIS.skill  agent-toga.skill  agent-zero.skill  apl253 (1).skill  clawcog.skill  codex-grassmania.skill  cogsim-pml.skill  cragbase.skill  deep-tree-echo-core-self.skill  dgen.skill  ec9o (2).skill  egreglyphic-telomorph (1).skill  egreglyphic-telomorph.skill  function-creator.skill  gauge-hypergraph-network.skill  general-relevance-transform.skill  get-shit-done (2).skill  ggml-spec (1).skill  gh253.skill  harmonic-ggml.skill  harmonic-llm.skill  harmonic-resonance-esn.skill  hypergauge-orbifold.skill  inferno-devcontainer (1).skill  koboldcpp (2).skill  language-creator.skill  llama-cpp-spec.skill  magic-patterns.skill  manuscog-cognitive-devkernel.skill  marduk-persona.skill  metamathematical-consciousness.skill  multiplatform-api-weaver.skill  neuro-nn.skill  neuro.skill  nn (3).skill  npu.skill  o9c (2).skill  opencog-inferno-kernel.skill  pie-nn (2).skill  plan9-cognitive-devkernel.skill  (+21 more)
Archecho/unreal-vnpu/: .gitignore  cograss-man.md
_archived/: README.md  copilot-migration-instructions.md.old
benchmarks/: cognitive-performance.bench.ts  mail-pipeline.bench.ts
deep-tree-echo-core/: jest.config.js  package.json
deep-tree-echo-orchestrator/: jest.config.cjs  package.json
deep-tree-echo-orchestrator/src/: dove9-integration.ts  index.ts  orchestrator.ts
delta-echo-desk/_locales/: fa.json  hu.json
docker/dovecot/: dovecot.conf
docs/reports/: DOVE9_DOVECOT_INTEGRATION_STATUS.md  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  NEXT_STEPS_STATUS.md
dove9/: package.json
dove9/src/: index.ts
dovecho-core/: .clang-format  .clangd  Matula-Triples.md  README.md  configure.ac  the-wizardman-cometh.md
dovecho-core/build-aux/: generate-compile-commands.sh  git-abi-version-gen  git-version-gen
dovecho-core/src/: Makefile.am  dove9-Makefile.am  dove9-system.h
dovecho-core/src/dove9/: .gitignore  CMakeLists.txt  CMakePresets.json  GNUmakefile  Makefile.am  README.md  dove9-system.c
dovecho-core/src/dove9/build-final/: CMakeCache.txt  CTestTestfile.cmake  cmake_install.cmake
dovecho-core/src/dove9/build-final/Testing/Temporary/: CTestCostData.txt
dovecho-core/src/dove9/cognitive/: dove9-dte-processor.c  dove9-triadic-engine.c  dove9-triadic-engine.h
dovecho-core/src/dove9/core/: dove9-kernel.c  dove9-kernel.h
dovecho-core/src/dove9/integration/: dove9-mail-protocol-bridge.c  dove9-mail-protocol-bridge.h  dove9-orchestrator-bridge.c  dove9-orchestrator-bridge.h  dove9-sys6-mail-scheduler.c  dove9-sys6-mail-scheduler.h  dove9-sys6-orchestrator-bridge.h
dovecho-core/src/dove9/test/: dove9-test-common.c  dove9-test-common.h  dove9-test-mocks.c  dove9-test-mocks.h  dove9.supp  test-dove9-api-boundary.c  test-dove9-cognitive-context.c  test-dove9-cognitive-pipeline.c  test-dove9-coupling-detection.c  test-dove9-dte-processor.c  test-dove9-event-callbacks.c  test-dove9-integration.c  test-dove9-kernel-mail.c  test-dove9-kernel.c  test-dove9-logger.c  test-dove9-mail-bridge.c  test-dove9-mail-protocol.c  test-dove9-memory-lifecycle.c  test-dove9-orchestrator-bridge.c  test-dove9-process-management.c  test-dove9-salience-landscape.c  test-dove9-security.c  test-dove9-step-assignment.c  test-dove9-stress.c  test-dove9-sys6-bridge.c  test-dove9-sys6-correctness.c  test-dove9-sys6-scheduler.c  test-dove9-system-config.c  test-dove9-system.c  test-dove9-triadic-engine.c  test-dove9-triadic-math.c  test-dove9-types.c
dovecho-core/src/dove9/types/: dove9-types.h
dovecho-core/src/dove9/utils/: dove9-logger.h
dovecho-core/src/plugins/dove9-cognitive/: Makefile.am  dove9-cognitive-plugin.c  dove9-cognitive-plugin.h  test-dove9-cognitive-plugin.c
plan/: infrastructure-dovecho-core-build-test-1.md
plans/cmake-migration/: plan.md
scripts/: run-jest-e2e.mjs
spec/: spec-architecture-dove9-c-cognitive-layer.md
tests/e2e/: dovecot-dove9-integration.e2e.test.ts
(+515 files in other folders)
